security: fix 4 critical vulnerabilities
- Fix 1: activate Helmet.js (already installed, never used) with CSP
- Fix 2: replace JWT in localStorage with httpOnly cookie
  - verifyJwt now reads req.cookies.auth_token
  - login/register set cookie via Set-Cookie header
  - add POST /v1/auth/logout endpoint
  - flexAuth routes API keys via Authorization header, browser users via cookie
  - frontend: withCredentials:true, remove all localStorage usage
- Fix 3: fix quota race condition for API keys
  - single atomic UPDATE (check + monthly reset + increment) replaces
    two separate queries; PostgreSQL row-level lock guarantees no overrun
- Fix 4: remove dangerous JWT_SECRET fallback
  - server crashes at startup with a clear error if JWT_SECRET is not set
- Add JWT_SECRET to .env.example with generation instructions

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-﻿# PostgreSQL connection string
+# PostgreSQL connection string
 DATABASE_URL=postgresql://user:password@localhost:5432/cv_ats_optimizer
 
-# JWT secret — use a long random string in production
-JWT_SECRET=change-me-to-a-long-random-string-at-least-32-chars
+# JWT secret — REQUIS : le serveur refuse de démarrer sans cette variable.
+# Générer avec : node -e "require('crypto').randomBytes(48).toString('hex')"
+JWT_SECRET=remplacer-par-une-chaine-aleatoire-de-96-caracteres-hex
 
 # OpenAI API key
 OPENAI_API_KEY=sk-...
